# PhysioFM

./: .env  .gitignore  README.md  job_script_example.sh  pyproject.toml  requirements.txt  sweep.yaml
CogLoad1 fullshot evaluation/: prepare.py  program.md  train.py
Experiments/NormWear + FiLM/: README.md  experiment.py  job_script_NormWear_FiLM.sh  normwear_loader.py  probe_model.py  run_ablation.py  train_linear_probe.py  wesad_dataset.py
Experiments/NormWear_FiLM/: README.md  baseline_selector.py  experiment.py  film.py  job_script_NormWear_FiLM.sh  normwear_loader.py  probe_model.py  program.md  run_ablation.py  train_linear_probe.py  wesad_dataset.py
NormWear/: README.md  downstream_main.py  main_model.py
NormWear/downstream_pipeline/: corrected_linear_prob.py  linear_prob_main.py  model_apis.py  prepare_embeds.py  task_specification.py
NormWear/modules/: signal_preprocess.py
NormWear/zero_shot/: engine_zeroshot.py  main_zeroshot.py  msitf_fusion.py  zero_shot_inference.py  zero_shot_inference_parallel.py
docs/: Running_zeroshot_evaluation_of_NormWear.md  evaluation_NormWear.md  job_script_example.sh
docs/Tutorial on supercomputing[FR]/: guide_supercalculateur_glicid.md
physioMoE/: README.md  Thinking_process.md  config.py  evaluate.py  metrics.py  train.py
physioMoE/data/: __init__.py  dataset.py
physioMoE/models/: __init__.py  experts.py  normwear_encoder.py  physio_moe.py  router.py  text_encoder.py
physioMoE/tests/: __init__.py  test_physio_moe.py  (+1 more)
utils/: dataset_processing.py  process_adabase.py  process_cogload.py  process_wesad.py
(+9 files in other folders)
