[project]
name = "normwear"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.15.0",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "multiprocess>=0.70.19",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pytorch-pretrained-vit>=0.0.7",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "tables>=3.11.1",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "transformers>=5.9.0",
    "wandb>=0.28.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
physiomoe-train = "physiomoe.train:main"
physiomoe-evaluate = "physiomoe.evaluate:main"

[tool.pytest.ini_options]
pythonpath = ["."]
